SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/p2s_base1__InitialCampaign__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__InitialCampaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The initial campaign associated with this contact</description>
    <inlineHelpText>The initial campaign associated with this contact</inlineHelpText>
    <label>Initial Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Contacts (Initial Campaign)</relationshipLabel>
    <relationshipName>InitialCampaignContacts</relationshipName>
    <type>Lookup</type>
</CustomField>