SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/p2s_base1__LifecycleStage__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__LifecycleStage__c</fullName>
    <description>The classification of your customer in their acquisition lifecycle</description>
    <inlineHelpText>The classification of your customer in their acquisition lifecycle</inlineHelpText>
    <label>Lifecycle Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Known</fullName>
                <default>true</default>
                <label>Known</label>
            </value>
            <value>
                <fullName>MQL</fullName>
            </value>
            <value>
                <fullName>SAL</fullName>
            </value>
            <value>
                <fullName>In Open Opportunity</fullName>
            </value>
            <value>
                <fullName>Recycle</fullName>
            </value>
            <value>
                <fullName>Not in Model</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>