SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/p2s_base1__MostRecentCampaign__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__MostRecentCampaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the campaign that was most recently added to the contact (as a campaign member)</description>
    <inlineHelpText>This is the campaign that was most recently added to the contact (as a campaign member)</inlineHelpText>
    <label>Most Recent Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Most Recent Contacts</relationshipLabel>
    <relationshipName>MostRecentContacts</relationshipName>
    <type>Lookup</type>
</CustomField>