SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/p2s_base1__PreviousTransitionDateTime__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__PreviousTransitionDateTime__c</fullName>
    <description>This is the date\time of the previous transition on the customer path</description>
    <inlineHelpText>This is the date\time of the previous transition on the customer path</inlineHelpText>
    <label>Previous Transition DateTime</label>
    <type>DateTime</type>
</CustomField>