SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Partner_Program__c.field-meta.xml
<CustomField>
    <fullName>Partner_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Program</label>
    <type>Checkbox</type>
</CustomField>