SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Past_Contact_Lastest_NPS_Score__c.field-meta.xml
<CustomField>
    <fullName>Past_Contact_Lastest_NPS_Score__c</fullName>
    <description>Usergem</description>
    <formula>IF( ISBLANK(UserGems__PastContact__c), 0, UserGems__PastContact__r.Latest_NPS_Score__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Past Contact Lastest NPS Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>