SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Pendo_NPS_Response__c.field-meta.xml
<CustomField>
    <fullName>Pendo_NPS_Response__c</fullName>
    <label>Pendo NPS Response</label>
    <length>100</length>
    <type>Text</type>
</CustomField>