SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/pEPURL__c.field-meta.xml
<CustomField>
    <fullName>pEPURL__c</fullName>
    <description>Webinar information from ON24</description>
    <label>ON24 Profile URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>