SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Referrer__c.field-meta.xml
<CustomField>
    <fullName>Referrer__c</fullName>
    <description>If the prospect was invited via another person in the LaunchDarkly app, this field will display that &apos;inviter&apos;s&apos; name.</description>
    <inlineHelpText>If the prospect was invited via another person in the LaunchDarkly app, this field will display that &apos;inviter&apos;s&apos; name.</inlineHelpText>
    <label>Referrer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>