SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Reroute_50_Score_Hold__c.field-meta.xml
<CustomField>
    <fullName>Reroute_50_Score_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a holding field, when checked it should not be rerouted.</description>
    <label>Reroute &lt;50 Score Hold</label>
    <type>Checkbox</type>
</CustomField>