SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Sales_Unsubscribe__c.field-meta.xml
<CustomField>
    <fullName>Sales_Unsubscribe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Unsubscribe</label>
    <type>Checkbox</type>
</CustomField>