SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Saleswhale_Active__c.field-meta.xml
<CustomField>
    <fullName>Saleswhale_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>See BIZ-255</description>
    <label>Saleswhale Active</label>
    <type>Checkbox</type>
</CustomField>