SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Secondary_Email__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Email__c</fullName>
    <description>Secondary email (e.g., personal)</description>
    <inlineHelpText>Secondary email (e.g., personal)</inlineHelpText>
    <label>Secondary Email</label>
    <type>Email</type>
</CustomField>