SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Signup_Date__c.field-meta.xml
<CustomField>
    <fullName>Signup_Date__c</fullName>
    <description>Signup date (pulled from converted Lead)</description>
    <inlineHelpText>Signup date (pulled from converted Lead)</inlineHelpText>
    <label>Signup Date</label>
    <type>Date</type>
</CustomField>