SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Sync_to_SFDC__c.field-meta.xml
<CustomField>
    <fullName>Sync_to_SFDC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom sync to to prevent data from entering Salesforce.</description>
    <label>Sync to SFDC</label>
    <type>Checkbox</type>
</CustomField>