SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <label>Technology</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>