SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Ticket_Price__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Price__c</fullName>
    <description>Mapped to Splash</description>
    <label>Ticket Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>