SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/TQL_Date__c.field-meta.xml
<CustomField>
    <fullName>TQL_Date__c</fullName>
    <description>Behavioral + Demographic score. Date stamp when TQL score reaches &gt;50.</description>
    <inlineHelpText>Behavioral + Demographic score. Date stamp when TQL score reaches &gt;50.</inlineHelpText>
    <label>TQL Date</label>
    <type>Date</type>
</CustomField>