SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/TQL_Score__c.field-meta.xml
<CustomField>
    <fullName>TQL_Score__c</fullName>
    <description>Behavioral + Demographic Score</description>
    <formula>Behavioral_Score__c +  Demographic_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Behavioral + Demographic Score</inlineHelpText>
    <label>TQL Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>