SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Trajectory_Registration_Choice__c.field-meta.xml
<CustomField>
    <fullName>Trajectory_Registration_Choice__c</fullName>
    <label>Trajectory Registration Choice</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>