SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Trial_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_End_Date__c</fullName>
    <description>Trial end date, as pulled from the SFDC Lead</description>
    <inlineHelpText>Trial end date, as pulled from the SFDC Lead</inlineHelpText>
    <label>Trial End Date</label>
    <type>Date</type>
</CustomField>