SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/UG_Sourced_Report__c.field-meta.xml
<CustomField>
    <fullName>UG_Sourced_Report__c</fullName>
    <label>UG - Sourced Report</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Past Users or Trial Invitees</fullName>
            </value>
            <value>
                <fullName>Past Customer (Account Level)</fullName>
            </value>
            <value>
                <fullName>Past Familial Account is Customer or Churn</fullName>
            </value>
            <value>
                <fullName>Past Account Structure ARR is 0</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>