SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Unmarketable__c.field-meta.xml
<CustomField>
    <fullName>Unmarketable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unmarketable</label>
    <type>Checkbox</type>
</CustomField>