SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/UserGems__PastAccount__c.field-meta.xml
<CustomField>
    <fullName>UserGems__PastAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UG - Past Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>PastAccountContacts</relationshipName>
    <type>Lookup</type>
</CustomField>