SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/UserGems__UG_Created_By_UG__c.field-meta.xml
<CustomField>
    <fullName>UserGems__UG_Created_By_UG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UG - Created By UG</label>
    <type>Checkbox</type>
</CustomField>