SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <formula>Account.Website</formula>
    <label>Website</label>
    <type>Text</type>
</CustomField>