SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/fields/Zendesk_Created_Date_on_Contact__c.field-meta.xml
<CustomField>
    <fullName>Zendesk_Created_Date_on_Contact__c</fullName>
    <description>Pull up the the date when a new zendesk ticket comes in</description>
    <label>Zendesk Created Date on Contact</label>
    <type>DateTime</type>
</CustomField>