SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/validationRules/Locks_Original_Contact_Method.validationRule-meta.xml
<ValidationRule>
    <fullName>Locks_Original_Contact_Method</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISCHANGED( Original_Contact_Method__c ), 
NOT(ISBLANK(TEXT(PRIORVALUE(Original_Contact_Method__c)))) 
)</errorConditionFormula>
    <errorDisplayField>Original_Contact_Method__c</errorDisplayField>
    <errorMessage>Field cannot be overridden.</errorMessage>
</ValidationRule>