SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>mkto71_Lead_Score__c</columns>
    <columns>MQL_Score__c</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>All Contacts</label>
</ListView>