SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/listViews/Inactive_Contacts_this_Week.listView-meta.xml
<ListView>
    <fullName>Inactive_Contacts_this_Week</fullName>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>is_Account_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>Inactive Contacts this Week</label>
</ListView>