SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/listViews/Team_Jess_TQL_Contacts.listView-meta.xml
<ListView>
    <fullName>Team_Jess_TQL_Contacts</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Last_Campaign__c</columns>
    <columns>TQL_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_Added_to_Sequence__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Manual_Follow_Up__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Actively_being_Sequenced__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>TQL_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>6/1/2021</value>
    </filters>
    <filters>
        <field>Contact_Owner_Role__c</field>
        <operation>contains</operation>
        <value>SDR - East,SDR Manager</value>
    </filters>
    <label>Team Jess: TQL Contacts</label>
</ListView>