SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/listViews/Team_Jess_Trial_Leads.listView-meta.xml
<ListView>
    <fullName>Team_Jess_Trial_Leads</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Status__c</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>mkto_si__Last_Interesting_Moment__c</columns>
    <columns>mkto_si__Last_Interesting_Moment_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TQL_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>7/1/2021</value>
    </filters>
    <filters>
        <field>Contact_Owner_Role__c</field>
        <operation>contains</operation>
        <value>SDR - East,SDR Manager</value>
    </filters>
    <filters>
        <field>Last_Campaign_Status__c</field>
        <operation>contains</operation>
        <value>Work email</value>
    </filters>
    <filters>
        <field>Manual_Follow_Up__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Actively_being_Sequenced__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Team Jess: Trial Leads</label>
</ListView>