SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/listViews/Team_Kevin_Direct_Requests_Contacts.listView-meta.xml
<ListView>
    <fullName>Team_Kevin_Direct_Requests_Contacts</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Status__c</columns>
    <columns>Contact_Owner_Role__c</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Last_Campaign__c</columns>
    <columns>Demo_Contact_Sales_Request__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Manual_Follow_Up__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Actively_being_Sequenced__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Demo_Contact_Sales_Request__c</field>
        <operation>greaterOrEqual</operation>
        <value>6/1/2021</value>
    </filters>
    <filters>
        <field>Contact_Owner_Role__c</field>
        <operation>contains</operation>
        <value>BDR - West,SDR - West,BDR Manager - West</value>
    </filters>
    <filters>
        <field>Last_Campaign_Text__c</field>
        <operation>notContain</operation>
        <value>trial</value>
    </filters>
    <label>Team Viet: Direct Requests Contacts</label>
</ListView>