SFDC_LD_Packages/objects-layouts/main/default/objects/Contact/listViews/Team_Kevin_TQL_Contacts.listView-meta.xml
<ListView>
    <fullName>Team_Kevin_TQL_Contacts</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND (5 OR 6) AND 7</booleanFilter>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Last_Campaign__c</columns>
    <columns>TQL_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_Added_to_Sequence__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Manual_Follow_Up__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Actively_being_Sequenced__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Last_Campaign__c</field>
        <operation>notContain</operation>
        <value>20-04 Outbound - ZoomInfo,20-06 Outbound - LeadIQ,20-11 - Form - IB - Demo Request (Gmail),outbound,demo,contact sales,contact us</value>
    </filters>
    <filters>
        <field>Demo_Contact_Sales_Request__c</field>
        <operation>greaterOrEqual</operation>
        <value>3/8/2021</value>
    </filters>
    <filters>
        <field>TQL_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>3/1/2021</value>
    </filters>
    <filters>
        <field>Contact_Owner_Role__c</field>
        <operation>contains</operation>
        <value>BDR - West,SDR - West,BDR Manager - West</value>
    </filters>
    <label>Team Viet: TQL Contacts</label>
</ListView>